# Logger

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/logger/: Logger.h
src/: Logger.cpp
